--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+# Haskell and GHC artifacts
 dist
 dist-*
 cabal-dev
@@ -21,3 +22,6 @@ cabal.project.local
 cabal.project.local~
 .HTF/
 .ghc.environment.*
+
+# Verilated haskell code artifacts
+verilog
