[#13] Cpu.CPu: Define CPU flags

--- a/mos6502.cabal
+++ b/mos6502.cabal
@@ -98,6 +98,7 @@ library
     Utilities.SevenSegment
     Utilities.Utils
     Cpu.Instructions
+    Cpu.Cpu
   default-language: Haskell2010
 
 executable clash
