--- a/mos6502.cabal
+++ b/mos6502.cabal
@@ -99,6 +99,7 @@ library
     Utilities.Utils
     Cpu.Instructions
     Cpu.Cpu
+    Cpu.Alu
   default-language: Haskell2010
 
 executable clash
@@ -116,11 +117,11 @@ executable clashi
     ghc-options: -dynamic
 
 test-suite doctests
-  main-is:          doctests.hs
-  type:             exitcode-stdio-1.0
+  main-is: doctests.hs
+  type: exitcode-stdio-1.0
   default-language: Haskell2010
-  ghc-options:      -Wall -Wcompat -threaded
-  hs-source-dirs:   tests
+  ghc-options: -Wall -Wcompat -threaded -rtsopts -with-rtsopts=-N
+  hs-source-dirs: tests
   Build-Depends: base, mos6502, doctest-parallel >= 0.2
 
 test-suite test-library
@@ -129,9 +130,10 @@ test-suite test-library
   type: exitcode-stdio-1.0
   default-language: Haskell2010
   hs-source-dirs: tests
-  ghc-options: -threaded
+  ghc-options: -Wall -Wcompat -threaded -rtsopts -with-rtsopts=-N
   other-modules:
     Tests.SanityCheck
+    Tests.Alu
   build-depends:
     mos6502,
     QuickCheck,
