[#14] Add Ormolu formatter

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
 
 jobs:
@@ -10,16 +10,19 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    - name: Install Nix
-      uses: DeterminateSystems/nix-installer-action@v16
+      - name: Install Nix
+        uses: DeterminateSystems/nix-installer-action@v16
 
-    - name: Magic Nix Cache
-      uses: DeterminateSystems/magic-nix-cache-action@v8
+      - name: Magic Nix Cache
+        uses: DeterminateSystems/magic-nix-cache-action@v8
 
-    - name: Cabal Build
-      run: nix develop .#ci --command cabal build
+      - name: Ormolu Format Check
+        run: nix develop .#ci --command ormolu --mode check $(find . -name '*.hs')
 
-    - name: Cabal Test
-      run: nix develop .#ci --command cabal test
+      - name: Cabal Build
+        run: nix develop .#ci --command cabal build
+
+      - name: Cabal Test
+        run: nix develop .#ci --command cabal test
