--- a/mos6502.cabal
+++ b/mos6502.cabal
@@ -137,6 +137,7 @@ test-suite test-library
   other-modules:
     Tests.SanityCheck
     Tests.Alu
+    Tests.CpuGenerator
   build-depends:
     mos6502,
     QuickCheck,
