--- a/mos6502.cabal
+++ b/mos6502.cabal
@@ -138,6 +138,7 @@ test-suite test-library
     Tests.SanityCheck
     Tests.Alu
     Tests.CpuGenerator
+    Tests.CpuExecutor
   build-depends:
     mos6502,
     QuickCheck,
