[#8] Move mealy combinator into cpu.cpu

--- a/mos6502.cabal
+++ b/mos6502.cabal
@@ -99,9 +99,10 @@ library
     DebugTopLevel
     Utilities.SevenSegment
     Utilities.Utils
-    Cpu.Instructions
+    Cpu.Data
     Cpu.Cpu
     Cpu.Alu
+    Cpu.Instructions
     Cpu.CpuState
     Cpu.Executor
     Cpu.Microcode.Data
