[#6] tests: Add instruction execution tests

--- a/mos6502.cabal
+++ b/mos6502.cabal
@@ -146,6 +146,7 @@ test-suite test-library
     Tests.CpuGenerator
     Tests.CpuExecutor
     Tests.CpuInstructions
+    Tests.CpuDecoder
   build-depends:
     mos6502,
     QuickCheck,
